# DBDTracker

./: .gitignore  README.md
desktop/: .env.example  background-collector.js  check_config.js  check_matches.js  database.js  database.test.js  dbd-map-catalog.json  force_supabase  inspect_elements.js  main.js  overlay.html  package-lock.json  package.json  preload.cjs  server.js  server.test.js  supabase_schema.sql  test_me.js
desktop-tauri/: README.md  package-lock.json  package.json
desktop-tauri/src/: index.html  overlay-bridge.js
desktop-tauri/src-tauri/: Cargo.toml  collector.js  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: collector_parser.rs  database.rs  lib.rs
desktop/map_overlays/: PLACEHOLDER.txt
map-check/: Cargo.toml  ELECTRON.md  ELECTRON_MAP_CATALOG.md  build.rs
map-check/.cargo/: config.toml
map-check/src/: main.rs  map_detector.rs
print-rust/: Cargo.toml
print-rust/src/: main.rs
